<resources>
    <string name="app_name">SimpleMoneyTracer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="activity">Activity</string>
    <string name="report">Report</string>
    <string name="category">Category</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_category">Category</string>

    <!-- Preference Titles -->
    <string name="title_notification">Notification</string>
    <string name="title_appearance">Appearance</string>
    <string name="currency">Currency</string>

    <!-- Messages Preferences -->
    <string name="notification_midday">AM / PM</string>
    <string name="notification_time">Set time</string>
    <string name="target_expense">Target Expense </string>
    <string name="set_dark_theme">Dark theme</string>
    <string name="title_target">Target Expense</string>
    <string name="target_amount">Target expense per month</string>
    <string name="reply_title">Default reply action</string>

    <string name="dark_on">Dark theme on</string>
    <string name="dark_off">Dark theme off</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="notification_text">Use Simple Money Tracer everyday</string>
    <string name="_20_00">$20.00</string>
    <string name="_2021_12_12">2021-12-12</string>
    <string name="edit">Edit</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="income">Income</string>
    <string name="save">Save</string>
    <string name="amount">Amount</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="default_currency">$</string>

<!--    category-->
    <string name="add_new_category">Add a new cateory</string>
    <string name="update_category">Update</string>
    <string name="cancel_category">Cancel</string>
    <string name="income_plus">Income (+)</string>
</resources>