<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/title_notification">

        <ListPreference
            app:entries="@array/time_entries"
            app:entryValues="@array/time_values"
            app:key="notiTime"
            app:title="@string/notification_time"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/midday_entries"
            app:entryValues="@array/midday_values"
            app:key="timeMidday"
            app:title="@string/notification_midday"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="targetExpense"
            app:singleLineTitle="true"
            app:title="@string/target_amount"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/currency">
        <EditTextPreference
            app:key="currency"
            app:singleLineTitle="true"
            app:title="@string/currency"
            app:defaultValue="$"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

</PreferenceScreen>