<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ActivityFragment">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="8sp"
        android:layout_marginBottom="8sp"
        android:clickable="true"
        android:contentDescription="@string/add"
        android:focusable="true"
        android:src="@android:drawable/ic_input_add" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_bright"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8sp"
                android:layout_weight="1"
                android:labelFor="@id/edtStartDate"
                android:text="@string/start_date"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8sp"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="date"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_bright"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8sp"
                android:layout_weight="1"
                android:labelFor="@id/edtEndDate"
                android:text="@string/end_date"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8sp"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="date"
                android:importantForAutofill="no" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewActivities"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

</FrameLayout>